Bug 500030 - kjournald crashes
Summary: kjournald crashes
Status: RESOLVED FIXED
Alias: None
Product: kjournald
Classification: Applications
Component: Browser (other bugs)
Version First Reported In: 24.12.2
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Andreas Cord-Landwehr
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-13 21:27 UTC by Ammat
Modified: 2025-02-18 11:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
coredump from coredumpctl info 4105 (23.44 KB, text/plain)
2025-02-13 21:27 UTC, Ammat
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ammat 2025-02-13 21:27:52 UTC
Created attachment 178322 [details]
coredump from coredumpctl info 4105

SUMMARY

i just updated the kde plasma to v6.3 and ran the kjournald

STEPS TO REPRODUCE
1. open the journald browser from app menu
2. the app will crash silently

OBSERVED RESULT

app crashes

EXPECTED RESULT

normally open up after a few seconds

SOFTWARE/OS VERSIONS 
Linux/KDE Plasma: Fedora 41 - KDE Plasma 6.3.0 
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2

ADDITIONAL INFORMATION
Comment 1 Andreas Cord-Landwehr 2025-02-15 14:21:38 UTC
Thank you for the report! For easier analysis could you please also attach

- the application's log output 
- and a backtrack with resolved symbols and full functions parameters? 

If you cannot resolve the backtrace yourselve, please attach the core file from coredumpd.
Comment 2 Ammat 2025-02-16 18:21:44 UTC
(In reply to Andreas Cord-Landwehr from comment #1)
> Thank you for the report! For easier analysis could you please also attach
> 
> - the application's log output 
> - and a backtrack with resolved symbols and full functions parameters? 
> 
> If you cannot resolve the backtrace yourselve, please attach the core file
> from coredumpd.

https://github.com/op30mmd/storage/releases/download/coredump/core.kjournaldbrowse.1000.6b685b026d6d4c8393c343977db8368c.3676.1739726648000000.zst

here
Comment 3 Andreas Cord-Landwehr 2025-02-17 19:04:01 UTC
Git commit 905d184fe1bae9dc1dde73d78150ba96243993f7 by Andreas Cord-Landwehr.
Committed on 17/02/2025 at 19:03.
Pushed by cordlandwehr into branch 'master'.

Fix possible violation of weak ordering compare function

It is possible the since/until values do change by adjustments of the
system clock, which breaks the invariant that those pairs do not overlap
over multiple boots.

M  +1    -1    lib/journaldhelper.cpp

https://invent.kde.org/system/kjournald/-/commit/905d184fe1bae9dc1dde73d78150ba96243993f7
Comment 4 Andreas Cord-Landwehr 2025-02-17 19:04:51 UTC
Git commit e5774915aa16450445b0d0297b53fb6f86da2900 by Andreas Cord-Landwehr.
Committed on 17/02/2025 at 19:04.
Pushed by cordlandwehr into branch 'release/24.12'.

Fix possible violation of weak ordering compare function

It is possible the since/until values do change by adjustments of the
system clock, which breaks the invariant that those pairs do not overlap
over multiple boots.

M  +1    -1    lib/journaldhelper.cpp

https://invent.kde.org/system/kjournald/-/commit/e5774915aa16450445b0d0297b53fb6f86da2900
Comment 5 Ammat 2025-02-18 11:42:00 UTC
(In reply to Andreas Cord-Landwehr from comment #4)
> Git commit e5774915aa16450445b0d0297b53fb6f86da2900 by Andreas Cord-Landwehr.
> Committed on 17/02/2025 at 19:04.
> Pushed by cordlandwehr into branch 'release/24.12'.
> 
> Fix possible violation of weak ordering compare function
> 
> It is possible the since/until values do change by adjustments of the
> system clock, which breaks the invariant that those pairs do not overlap
> over multiple boots.
> 
> M  +1    -1    lib/journaldhelper.cpp
> 
> https://invent.kde.org/system/kjournald/-/commit/
> e5774915aa16450445b0d0297b53fb6f86da2900

thank you very much