Fix possible violation of weak ordering compare function

It is possible the since/until values do change by adjustments of the
system clock, which breaks the invariant that those pairs do not overlap
over multiple boots.

BUG: 500030